Change colours to solve contrast issue
I've added a modifier class for the next-chapter specifics templates so it does not override any wheelercentre style.

--- a/assets/targets/public-next-chapter/masthead/nav.css
+++ b/assets/targets/public-next-chapter/masthead/nav.css
@@ -1,5 +1,5 @@
 .nc-nav {
-  background-color: var(--color-blue);
+  background-color: var(--color-dark-blue);
   padding-bottom: 4rem;
   padding-left: 9rem;
   padding-top: 3rem;
@@ -25,7 +25,7 @@
 }
 
 .nc-nav::after {
-  background-color: var(--color-blue);
+  background-color: var(--color-dark-blue);
   bottom: 0;
   content: "";
   display: block;
